# find-work-plugins

./: .drone.yml  .gitignore  README.md  tox.ini  tox.toml
find-work-bugzilla/: ChangeLog  README.md  pyproject.toml  tox.ini
find-work-bugzilla/find_work/plugins/gentoo_bugzilla/: cli.py  internal.py
find-work-example/: README.md  pyproject.toml
find-work-example/find_work/plugins/example/: cli.py  constants.py  types.py
find-work-pgo/: README.md  pyproject.toml
find-work-pgo/find_work/plugins/example/: __init__.py  internal.py  options.py
find-work-pgo/find_work/plugins/pgo/: __init__.py  cli.py  constants.py  internal.py  types.py
find-work-pgo/man/: find-work-example.1  find-work-pgo.1
find-work-pkgcheck/: ChangeLog  README.md  pyproject.toml  tox.ini
find-work-pkgcheck/find_work/plugins/pkgcheck_scan/: __init__.py  cli.py  internal.py  options.py
find-work-pkgcheck/man/: find-work-pkgcheck.1
find-work-repology/: ChangeLog  ChangeLog.license  README.md  pyproject.toml  tox.ini
find-work-repology/find_work/plugins/repology/: cli.py  internal.py  reporters.py  types.py
find-work-repology/man/: find-work-repology.1
