# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: 2024-2025 Anna <cyber@sysrq.in>

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "find-work-pgo"
version = "0.1.0"
authors = [
    {name = "Anna", email = "cyber@sysrq.in"},
]
dynamic = ["description"]
readme = "README.md"
license = {text = "WTFPL"}
requires-python = ">=3.11"
dependencies = [
    "click",
    "click-aliases",
    "find-work<2,>=1",
    "gentoopm<2",
    "pydantic<3,>=2",
    "sortedcontainers",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "License :: DFSG approved",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["gentoo", "ebuild", "repository", "maintainer"]

[dependency-groups]
test = [
    "pytest",
    "pytest-import-check",
]
typecheck = [
    "mypy",
    "sortedcontainers-stubs",
]
lint = [
    "bandit",
    "pycodestyle",
    "pyflakes",
]

[project.entry-points."find_work.plugins.v1"]
pgo = "find_work.plugins.pgo"

[project.urls]
Home = "https://find-work.sysrq.in/"
Source = "https://git.sysrq.in/find-work-plugins"
Issues = "https://bugs.sysrq.in/enter_bug.cgi?product=Software&component=find-work"
Changelog = "https://git.sysrq.in/find-work-plugins/plain/find-work-pgo/ChangeLog"

[tool.flit.module]
name = "find_work.plugins.pgo"

[tool.flit.sdist]
include = [
    "ChangeLog",
    "man/",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules --import-check"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "gentoopm",
    "gentoopm.*",
]
ignore_missing_imports = true

[tool.tox]
requires = ["tox>=4.22"]
env_list = ["3.12", "3.13", "3.14", "lint"]

[tool.tox.env_run_base]
description = "run the tests + mypy under {base_python}"
ignore_errors = true
dependency_groups = [
    "test",
    "typecheck",
]
commands = [
    ["pytest", "-vv", "{tty:--color=yes}", "find_work"],
    ["mypy", "--explicit-package-bases", "find_work"],
]

[tool.tox.env.lint]
description = "run the linters"
ignore_errors = true
skip_install = true
dependency_groups = ["lint"]
commands = [
    ["pyflakes", "find_work"],
    ["pycodestyle", "find_work"],
    ["bandit", "-r", "find_work"],
]
